# PolarDesigner

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  PolarDesigner.exe.manifest  PolarDesigner.jucer  README.md  auv3find.sh  fuzztest.sh  fuzztest_linux.sh  fuzztest_macos.sh  killregistrar.sh  showmark.sh
.github/workflows/: build_and_test.yml  cmake_ctest.yml
Documentation/: PolarDesigner.dia
Source/: ._PluginEditor.cpp  ._PluginEditor.h  ._PluginProcessor.cpp  ._PluginProcessor.h  Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/unittests/: Foo_unittest.cpp
cmake/: Assets.cmake  CHANGELOG.md  Tests.cmake  XcodePrettify.cmake
extra/ProTools/: PolarDesigner3.xml
modules/fftw/: CMakeLists.txt
modules/melatonin_inspector/melatonin/helpers/: misc.h
packaging/: PP_default_Preset_3Bands.json  PP_default_Preset_Diffuse.json  austrianaudio_logo.icns  distribution.xml.template  dmg.json  installer.iss
packaging/resources/: EULA  README
patches/: change_method_of_resizing_components_for_flexbox.patch
presets/: Default.json
resources/: ._Delay.h  Delay.h  LaunchScreen.storyboard  scrollImage.xcf
resources/Images.xcassets/AppIcon.appiconset/: Contents.json
resources/customComponents/: ._DirSlider.h  ._DirectivityEQ.h  ._FirstOrderDirectivityVisualizer.h  ._ImgPaths.h  ._SimpleLabel.h  ._TitleBar.h  AlertOverlay.h  AnimatedLabel.h  DirSlider.h  DirectivityEQ.h  EndlessSlider.h  FirstOrderDirectivityVisualizer.h  GainSlider.h  ImgPaths.h  MultiTextButton.h  MuteSoloButton.h  PolarPatternVisualizer.h  PresetListBox.h  ReverseSlider.h  SimpleLabel.h  TitleBar.h  TitleBarPaths.h
resources/lookAndFeel/: AA_LaF.h  BinaryFonts.cpp  BinaryFonts.h  MainLookAndFeel.h
source/: Constants.h  Constants.hpp  Conversions.hpp  FilterCoefficients.h  FilterCoefficients.hpp  Logging.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/resources/: Delay.h  PolarDesigner.xml
source/resources/customComponents/: ._AlertOverlay.h  ._MuteSoloButton.h  ._ReverseSlider.h  ._TitleBarPaths.h  ABComponent.hpp  AnimatedLabel.h  Colours.hpp  DirSlider.h  DirectivityEQ.h  EndlessSlider.h  GainSlider.h  MultiTextButton.h  MultiTextButton.hpp  PolarPatternVisualizer.h  PresetListBox.h  ReverseSlider.h  SimpleLabel.h  TextButton.hpp  TitleBar.h  TitleBarPaths.h
source/resources/lookAndFeel/: ._AA_LaF.h  BinaryFonts.h  DefaultLookAndFeel.hpp  MainLookAndFeel.h
sudara_patches_/: a-0001-computeAllFilterCoefficients-should-call-initAllConv.patch  b-0002-Do-all-filter-recalculation-on-the-audio-thread.patch  c-0001-Remove-juce-Drawable-from-paint-call.-Add-component-.patch  d-0002-Change-icon-color-on-enablementChanged.patch  diff_midCubaseABDebug.diff  e-0001-PluginEditor-changes-for-melatonin-inspector.patch  f-0002-Temporary-fix-for-app-wide-sluggish-button-drawing.patch  g-0001-Performance-improvements-to-PolarPatternVisualizer.patch  melatonin_perfetto_patch.diff
tests/: CMakeLists.txt  Eq.cpp  Filterbank.cpp  PluginBasics.cpp  Processor.cpp  ProcessorStartup.cpp  README.md
tests/Cubase/: Cubase_1Band_48khz.cpr  Cubase_1Band_96khz.cpr
tests/Cubase/Audio/peaks/: OC818-AH- Drums 1.wav.reapeaks
tests/Cubase/Images/: OC818-AH- Drums 1.peak  OC818-AH- Drums 1_LEFT.peak
tests/DAW_tests/: 00_polardesigner_all_formats_test.sh  Makefile  testplan.md
tests/DAW_tests/Reaper/: 01_pinknoise.RPP  PolarDesigner.rpp  PolarDesigner_1Band_96khz_SQUARE.RPP  PolarDesigner_4Band.rpp  PolarDesigner_v2_vs_v3.RPP  Polardesigner_TerminationControl.RPP  make_test_tarball.sh  terminatorControl_OLDvsNEW.RPP
tests/DAW_tests/Reaper/PolarDesigner_Windows_OC818_Drums/Backups/: PolarDesigner_Windows_OC818_Drums-2025-07-03_151909.rpp-bak
tests/DAW_tests/Reaper/PolarDesigner_Windows_OC818_Drums/Media/peaks/: OC818-AH- Drums 1.wav.reapeaks
tests/DAW_tests/Reaper/Scripts/: 01_pinknoise.lua  PolarDesigner_V2_vs_V3_RenderABTracks.lua  PolarDesigner_V2_vs_V3_RenderABTracks_PluginPerTrack.lua
tests/DAW_tests/Reference/: 00_polardesigner_all_formats_reaper_results.txt
tests/Reaper/: 00_polardesigner_all_formats.RPP  CurrentTestInProgress.lua  PolarDesigner_1Band.rpp  PolarDesigner_1Band_48khz.RPP  PolarDesigner_1Band_48khz_SQUARE.RPP  PolarDesigner_1Band_96khz.RPP  PolarDesigner_2Band.rpp  PolarDesigner_3Band.rpp  PolarDesigner_5Band.rpp  PolarDesigner_v2_vs_v3.RPP  PolarDesigner_v2_vs_v3_001.RPP  doV2_vs_V3_Test.sh  make_test_tarball.sh
tests/Reaper/PolarDesigner_Windows_OC818_Drums/: PolarDesigner_Windows_OC818_Drums.rpp
tests/Reaper/PolarDesigner_Windows_OC818_Drums/Backups/: PolarDesigner_Windows_OC818_Drums-2025-07-03_145811.rpp-bak
tests/Reaper/Scripts/: PolarDesigner_V2_vs_V3_RenderABTracks.lua
tests/Results/: sox_error_log.txt
tests/helpers/: TestHelpers.hpp
